<resources>
    <string name="app_name">codelab8.3:Notification Scheduler</string>
    <string name="network_type_required">Network type required:</string>
    <string name="none">none</string>
    <string name="any_network">any network</string>
    <string name="wifi">Wi-Fi</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="cancel_jobs">Cancel Jobs</string>
    <string name="required">Required:</string>
    <string name="device_idle">Device Idle</string>
    <string name="device_charging">Device Charging</string>
</resources>
